<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical" >






    <LinearLayout
        android:layout_margin="@dimen/margin_ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_margin="@dimen/margin_five"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_option"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color_black"/>
        <TextView
            android:id="@+id/close"
            android:layout_margin="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size"
            android:text="@string/close"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="15dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/margin_three"
            android:gravity="center"
            android:id="@+id/select"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/select"
            android:textColor="@color/text_color_black"
            android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
        <CheckBox
            android:textSize="@dimen/text_size"
            android:background="@color/light_grey"
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            />
     </LinearLayout>
      <!--  <ToggleButton
            android:textSize="@dimen/text_size"
            android:background="@color/dark_grey"
            android:id="@+id/tb2"
            android:textColor="@color/text_color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/all"
            android:textOn="@string/none"  />-->
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/margin_ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SearchView

            android:layout_margin="@dimen/margin_fifteen"
            android:searchIcon="@drawable/search"
            android:background="@drawable/edittextstyle"
            android:queryHint="@string/query_hint_search_user"
            android:theme="@style/Hint"
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:iconifiedByDefault="false">
        </SearchView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ListView
            android:background="@color/light_grey"

            android:layout_margin="@dimen/margin_fifteen"
            android:id="@+id/checkable_list"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button

            android:layout_margin="@dimen/margin_ten"
            android:textSize="@dimen/text_size"
            android:id="@+id/btnapply"
            android:textColor="@color/red"
            android:gravity="center"
            android:text="@string/apply"

            android:background="@drawable/btncancelstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>








