<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".EmployeeReportActivity"
    tools:showIn="@layout/emp_tab_bar">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/hint_grey" />

    <TextView
        android:id="@+id/emp_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/employee_reports"
        android:textAlignment="center"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_five"

        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:gravity="left"
            android:textAlignment="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:gravity="center"
            android:layout_margin="@dimen/margin_five"

            android:orientation="horizontal"

            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:layout_gravity="center"
                android:gravity="center">


                <TextView
                    android:id="@+id/edit_cal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center
"                    android:onClick="ShowPopup"

                    android:gravity="center"
                    android:text="21/06/2019-21/06/2019"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/cal_text_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01">

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:background="@drawable/cal"
                    android:onClick="ShowPopup"
                    android:theme="@style/CalendarDatePickerDialog" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_five"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/select_g4s_officials"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size" />

        <!-- <Spinner
             android:id="@+id/spin__g4s_client"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
     android:layout_margin="@dimen/margin_three"
             android:background="@drawable/spinner_hub"
             android:singleLine="true"
             android:theme="@style/spinnerTheme">

         </Spinner>-->
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spin__g4s_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_five"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/hint_grey" />

    <LinearLayout
        android:layout_margin="@dimen/margin_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"

                    android:text="@string/intro"
                    android:layout_gravity="start"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/margin_two"
                    android:gravity="center"
                    android:text="93"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size"
                  />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/view_height"
            android:layout_height="match_parent"
            android:background="@color/hint_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"

                    android:text="@string/client_map"
                    android:layout_gravity="start"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/margin_three"
                    android:gravity="center"
                    android:text="93"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/hint_grey" />
    <!-- our tablayout to display tabs  -->
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/scheduled_visit_bg"/>

    <!-- View pager to swipe views -->
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>